# a2i-fdp

./: .gitignore  README.md  ace.py  ace_helpers.py  ace_run.py  main.py  models.py  pyproject.toml  ultralytics_model_with_gradients.py
alignment/: multi_scale_network.py  multi_scale_training.py
multi_concept/: __init__.py  concept_aggregator.py  demo.py  detect.py  mapper.py  model.py  results.py  visualization.py
